apps/netbootxyz/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netbootxyz
  namespace: netbootxyz
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: nginx
  rules:
  # kustomize will replace this with the cluster ip address
  - host: netbootxyz.xxx.xxx.xxx.xxx.nip.io
    http:
      paths:
      - backend:
          service:
            name: netbootxyz
            port:
              name: main
        path: /
        pathType: ImplementationSpecific
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
  name: netbootxyz-assets
  namespace: netbootxyz
spec:
  ingressClassName: nginx
  rules:
  # kustomize will replace this with the cluster ip address
  - host: netbootxyz-assets.xxx.xxx.xxx.xxx.nip.io
    http:
      paths:
      - backend:
          service:
            name: netbootxyz-assets
            port:
              name: assets
        path: /
        pathType: ImplementationSpecific
